# LegalConnect

./: .env.example  .gitignore  docker-compose.yml  railway.json
backend/: Dockerfile  Dockerfile.local  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17f2a2ad0bd7_add_lawyer_profile.py  5424e659af73_initial_migration.py  701bde68d007_update_lawyer_verification.py  a277ec65b7b1_modify_phone_address.py  b388c7d8e9f2_add_lawyer_models.py  ba538a0596a9_initial.py  d23c2b2b62ed_booking_documentation.py  d4e22685554f_initial_migrations.py  e03ab3d7c84d_chat_chatbot.py
backend/data/: vi-law-qa-3161.csv
backend/docs/: booking_note.txt  chat_implementation.txt  database_description.txt  db.sql  frontend_instruction.txt  legal_ai.md  route_description.txt  user_action_flow.txt
backend/scripts/: seed_data.py  seed_instruction.txt
backend/src/: main.py  models.py
backend/src/auth/: dependencies.py  exceptions.py  router.py  services.py  utils.py
backend/src/booking/: constants.py  exceptions.py  models.py  router.py  schemas.py  utils.py
backend/src/chat/: __init__.py  exceptions.py  manager.py  models.py  moderation.py  rate_limit.py  router.py  schemas.py  services.py  utils.py
backend/src/core/: arq_worker.py  base_model.py  config.py  constants.py  database.py  exceptions.py
backend/src/documentation/: exceptions.py  models.py  router.py  schemas.py  utils.py
backend/src/lawyer/: constants.py  exceptions.py  lawyer_description.txt  models.py  router.py  schemas.py  (+1 more)
backend/tests/: testing_script.txt
(+164 files in other folders)
