[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.25.0",
    "alembic>=1.16.5",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyotp>=2.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9",
]
